# venddb

./: .dockerignore  .gitignore  Dockerfile  README.md  config.jsonc  docker-compose.yml  go.mod  go.sum  infer_convnextv2.py  infer_yolo.py  main.go  milvus.yaml  train_clip.py  train_convnextv2.py  train_siglip2.py  train_yolo.py
embed_server/: Dockerfile  embed_service.py  requirements.txt
images/: .gitignore
images/askul_drink/: 2023505_3L1.json  2344261_3L1.json  275227_3L1.json  2903252_3L1.json  2934750_3L1.json  4048586_3L1.json  430656_3L1.json  4542759_3L1.json  505381_3L1.json  5100869_3L1.json  545716_3L1.json  592725_3L1.json  6292931_3L1.json  652888_3L1.json  7795505_3L1.json  8027717_3L1.json  8249312_3L1.json  8495808_3L1.json  8503033_3L1.json  9311852_3L1.json  9680140_3L1.json  985375_3L1.json  AAN6332_3L1.json  AAU9389_3L1.json  AH64199_3L1.json  AH94905_3L1.json  AH99547_3L1.json  AHA6646_3L1.json  AHA6649_3L1.json  AHA6671_3L1.json  AJE6130_3L1.json  AKW6499_3L1.json  APH4931_3L1.json  APH4932_3L1.json  ARN6985_3L1.json  ARW4643_3L1.json  ARW4661_3L1.json  AU47875_3L1.json  AU48175_3L1.json  AU48281_3L1.json  (+99 more)
images/coca_cola_nutritional/: ayataka_1.json  ayataka_2.json  coca_cola_1.json
images/vending_machine/: DSC01920.json  DSC03062.json  PXL_20260107_051913156.json  PXL_20260107_052252084.json  PXL_20260113_041625808.json  PXL_20260113_041722651.json  PXL_20260113_042432702.json  PXL_20260113_151717089.json  PXL_20260113_152307457.json  PXL_20260113_152313633.json  PXL_20260113_155515241.json  PXL_20260113_155734397.json  PXL_20260113_155739858.json  PXL_20260113_155906756.json  PXL_20260113_155914697.json  PXL_20260113_160850407.json  PXL_20260114_023517874.json  PXL_20260114_112351052.json  PXL_20260114_112509116.json  PXL_20260114_112542948.json  PXL_20260114_112633687.json  PXL_20260114_113623694.json  PXL_20260114_123452325.json  PXL_20260114_132035591.json  PXL_20260114_135054164.json  PXL_20260114_135100857.json  PXL_20260114_135113159.json  PXL_20260114_135118233.json  PXL_20260114_135302786.json  PXL_20260114_135724400.json  PXL_20260114_150817529.json  PXL_20260114_150824646.json  PXL_20260114_150834851.json  PXL_20260114_150858308.json  PXL_20260114_150928003.json  PXL_20260114_151918515.json  PXL_20260114_151929456.json  PXL_20260114_161100087.json  PXL_20260114_161110403.json  PXL_20260114_161116800.json  (+23 more)
inference/: .env  CMakeLists.txt
inference/include/: venddb_inference.h
inference/src/: lib.cpp  main.cpp
inference/yolo26_model/: main.py
inference_native/: CMakeLists.txt
inference_native/src/: lib.cpp
migrations/: 0001_initial.down.sql  0001_initial.up.sql
server/: router.go  server.go
vend/: embed.go  image_utils.go  processor.go  router.go  scrape.go  server.go  services.go  vend.go  yolo_inference.go
